--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
+        android:name="com.example.composeshoppingchecklist.App"
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/baseline_checklist_24"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/baseline_checklist_24"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ComposeShoppingChecklist"
-        tools:targetApi="31">
+        android:theme="@style/Theme.App">
         <activity
-            android:name=".MainActivity"
             android:exported="true"
+            android:name="com.example.composeshoppingchecklist.ui.view.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ComposeShoppingChecklist">
+            android:hardwareAccelerated="true"
+            android:theme="@style/Theme.App.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- Needed for UI tests -->
+        <activity
+            android:name="androidx.activity.ComponentActivity"
+            android:theme="@style/Theme.App.NoActionBar" />
     </application>
 
 </manifest>
