--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,71 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-alias(libs.plugins.android.application) apply false
-    alias(libs.plugins.jetbrains.kotlin.android) apply false
+buildscript {
+    def versions = [:]
+    versions.android_gradle_plugin = '8.1.1'
+    versions.arch_core = '2.2.0'
+    versions.atsl_core = '1.5.0'
+    versions.atsl_junit = '1.1.5'
+    versions.atsl_monitor = '1.6.1'
+    versions.atsl_rules = '1.5.0'
+    versions.atsl_runner = '1.5.2'
+    versions.compose_activity = '1.8.1'
+    versions.compose_compiles_version = '1.5.4'
+    versions.compose_version = '1.5.4'
+    versions.constraint_layout = '2.1.4'
+    versions.activity_ktx = '1.8.1'
+    versions.core_ktx = '1.12.0'
+    versions.coroutine = '1.7.3'
+    versions.coroutines_adapter = "0.9.2"
+    versions.dagger = '2.27'
+    versions.diffplug = "6.1.0"
+    versions.espresso = '3.6.0-alpha01'
+    versions.fragment = '1.6.2'
+    versions.fragment_testing = '1.6.2'
+    versions.hamcrest = "1.3"
+    versions.junit = '4.13.2'
+    versions.koin = '3.3.0'
+    versions.kotlin = '1.9.20'
+    versions.ktlint = "0.33.0"
+    versions.lifecycleExt = '2.2.0'
+    versions.lifecycle = '2.6.2'
+    versions.material = '1.10.0'
+    versions.mockito = '5.7.0'
+    versions.mockito_inline = '5.2.0'
+    versions.mockwebserver = "3.8.1"
+    versions.multidex = "2.0.1"
+    versions.navigation = '2.3.0-alpha05'
+    versions.preference = '1.2.1'
+    versions.robolectric = '4.11.1'
+    versions.room = '2.6.0'
+    versions.support = '1.6.1'
+    versions.truth = '1.1.5'
+    ext.versions = versions
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:$versions.android_gradle_plugin"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$versions.kotlin"
+        classpath "org.jetbrains.kotlin:kotlin-noarg:$versions.kotlin"
+        classpath "com.diffplug.spotless:spotless-plugin-gradle:$versions.diffplug"
+        classpath "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin:1.9.20-1.0.14"
+    }
+}
+
+apply plugin: "com.diffplug.spotless"
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
+spotless {
+    kotlin {
+        target "**/*.kt"
+        ktlint(versions.ktlint)
+    }
 }
